Update docker-entrypoint.sh
Update Java Arguments